src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FLOAT

Grammar

Rule 0     S' -> command
Rule 1     command -> book_command
Rule 2     command -> confirm_command
Rule 3     command -> pay_command
Rule 4     command -> cancel_command
Rule 5     command -> list_command
Rule 6     command -> view_command
Rule 7     command -> history_command
Rule 8     command -> help_command
Rule 9     command -> exit_command
Rule 10    identifier_list -> IDENTIFIER identifier_list
Rule 11    identifier_list -> IDENTIFIER
Rule 12    identifier_list -> STRING
Rule 13    book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 14    book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
Rule 15    confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR identifier_list SYM_END
Rule 16    confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR identifier_list SYM_END
Rule 17    pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list FOR identifier_list SYM_END
Rule 18    cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list FOR identifier_list SYM_END
Rule 19    list_command -> KEYWORD_LIST identifier_list SCHEDULE SYM_END
Rule 20    view_command -> KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END
Rule 21    history_command -> KEYWORD_HISTORY FOR identifier_list SYM_END
Rule 22    help_command -> KEYWORD_HELP SYM_END
Rule 23    exit_command -> KEYWORD_EXIT SYM_END

Terminals, with rules where they appear

AT                   : 13 14
DATE                 : 13 14
FLOAT                : 
FOR                  : 13 13 14 14 15 15 16 16 17 17 18 18 20 21
FROM                 : 13 14
IDENTIFIER           : 10 11
INTEGER              : 14 16
KEYWORD_BOOK         : 13 14
KEYWORD_CANCEL       : 18
KEYWORD_CONFIRM      : 15 16
KEYWORD_EXIT         : 23
KEYWORD_HELP         : 22
KEYWORD_HISTORY      : 21
KEYWORD_LIST         : 19
KEYWORD_PAY          : 17
KEYWORD_TICKET       : 13
KEYWORD_TICKETS      : 14
KEYWORD_VIEW         : 20
ON                   : 13 14
RESERVATION          : 15 17 18
RESERVATIONS         : 16
SCHEDULE             : 19 20
STRING               : 12
SYM_END              : 13 14 15 16 17 18 19 20 21 22 23
TIME                 : 13 14
TO                   : 13 14
error                : 

Nonterminals, with rules where they appear

book_command         : 1
cancel_command       : 4
command              : 0
confirm_command      : 2
exit_command         : 9
help_command         : 8
history_command      : 7
identifier_list      : 10 13 13 13 13 14 14 14 14 15 15 16 16 17 17 18 18 19 20 21
list_command         : 5
pay_command          : 3
view_command         : 6

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . book_command
    (2) command -> . confirm_command
    (3) command -> . pay_command
    (4) command -> . cancel_command
    (5) command -> . list_command
    (6) command -> . view_command
    (7) command -> . history_command
    (8) command -> . help_command
    (9) command -> . exit_command
    (13) book_command -> . KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (14) book_command -> . KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (15) confirm_command -> . KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR identifier_list SYM_END
    (16) confirm_command -> . KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR identifier_list SYM_END
    (17) pay_command -> . KEYWORD_PAY RESERVATION FOR identifier_list FOR identifier_list SYM_END
    (18) cancel_command -> . KEYWORD_CANCEL RESERVATION FOR identifier_list FOR identifier_list SYM_END
    (19) list_command -> . KEYWORD_LIST identifier_list SCHEDULE SYM_END
    (20) view_command -> . KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END
    (21) history_command -> . KEYWORD_HISTORY FOR identifier_list SYM_END
    (22) help_command -> . KEYWORD_HELP SYM_END
    (23) exit_command -> . KEYWORD_EXIT SYM_END

    KEYWORD_BOOK    shift and go to state 11
    KEYWORD_CONFIRM shift and go to state 12
    KEYWORD_PAY     shift and go to state 13
    KEYWORD_CANCEL  shift and go to state 14
    KEYWORD_LIST    shift and go to state 15
    KEYWORD_VIEW    shift and go to state 16
    KEYWORD_HISTORY shift and go to state 17
    KEYWORD_HELP    shift and go to state 18
    KEYWORD_EXIT    shift and go to state 19

    command                        shift and go to state 1
    book_command                   shift and go to state 2
    confirm_command                shift and go to state 3
    pay_command                    shift and go to state 4
    cancel_command                 shift and go to state 5
    list_command                   shift and go to state 6
    view_command                   shift and go to state 7
    history_command                shift and go to state 8
    help_command                   shift and go to state 9
    exit_command                   shift and go to state 10

state 1

    (0) S' -> command .



state 2

    (1) command -> book_command .

    $end            reduce using rule 1 (command -> book_command .)


state 3

    (2) command -> confirm_command .

    $end            reduce using rule 2 (command -> confirm_command .)


state 4

    (3) command -> pay_command .

    $end            reduce using rule 3 (command -> pay_command .)


state 5

    (4) command -> cancel_command .

    $end            reduce using rule 4 (command -> cancel_command .)


state 6

    (5) command -> list_command .

    $end            reduce using rule 5 (command -> list_command .)


state 7

    (6) command -> view_command .

    $end            reduce using rule 6 (command -> view_command .)


state 8

    (7) command -> history_command .

    $end            reduce using rule 7 (command -> history_command .)


state 9

    (8) command -> help_command .

    $end            reduce using rule 8 (command -> help_command .)


state 10

    (9) command -> exit_command .

    $end            reduce using rule 9 (command -> exit_command .)


state 11

    (13) book_command -> KEYWORD_BOOK . KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (14) book_command -> KEYWORD_BOOK . INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    KEYWORD_TICKET  shift and go to state 20
    INTEGER         shift and go to state 21


state 12

    (15) confirm_command -> KEYWORD_CONFIRM . RESERVATION FOR identifier_list FOR identifier_list SYM_END
    (16) confirm_command -> KEYWORD_CONFIRM . INTEGER RESERVATIONS FOR identifier_list FOR identifier_list SYM_END

    RESERVATION     shift and go to state 22
    INTEGER         shift and go to state 23


state 13

    (17) pay_command -> KEYWORD_PAY . RESERVATION FOR identifier_list FOR identifier_list SYM_END

    RESERVATION     shift and go to state 24


state 14

    (18) cancel_command -> KEYWORD_CANCEL . RESERVATION FOR identifier_list FOR identifier_list SYM_END

    RESERVATION     shift and go to state 25


state 15

    (19) list_command -> KEYWORD_LIST . identifier_list SCHEDULE SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 26

state 16

    (20) view_command -> KEYWORD_VIEW . SCHEDULE FOR identifier_list SYM_END

    SCHEDULE        shift and go to state 29


state 17

    (21) history_command -> KEYWORD_HISTORY . FOR identifier_list SYM_END

    FOR             shift and go to state 30


state 18

    (22) help_command -> KEYWORD_HELP . SYM_END

    SYM_END         shift and go to state 31


state 19

    (23) exit_command -> KEYWORD_EXIT . SYM_END

    SYM_END         shift and go to state 32


state 20

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET . FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    FOR             shift and go to state 33


state 21

    (14) book_command -> KEYWORD_BOOK INTEGER . KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    KEYWORD_TICKETS shift and go to state 34


state 22

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION . FOR identifier_list FOR identifier_list SYM_END

    FOR             shift and go to state 35


state 23

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER . RESERVATIONS FOR identifier_list FOR identifier_list SYM_END

    RESERVATIONS    shift and go to state 36


state 24

    (17) pay_command -> KEYWORD_PAY RESERVATION . FOR identifier_list FOR identifier_list SYM_END

    FOR             shift and go to state 37


state 25

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION . FOR identifier_list FOR identifier_list SYM_END

    FOR             shift and go to state 38


state 26

    (19) list_command -> KEYWORD_LIST identifier_list . SCHEDULE SYM_END

    SCHEDULE        shift and go to state 39


state 27

    (10) identifier_list -> IDENTIFIER . identifier_list
    (11) identifier_list -> IDENTIFIER .
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    SCHEDULE        reduce using rule 11 (identifier_list -> IDENTIFIER .)
    SYM_END         reduce using rule 11 (identifier_list -> IDENTIFIER .)
    FROM            reduce using rule 11 (identifier_list -> IDENTIFIER .)
    FOR             reduce using rule 11 (identifier_list -> IDENTIFIER .)
    TO              reduce using rule 11 (identifier_list -> IDENTIFIER .)
    ON              reduce using rule 11 (identifier_list -> IDENTIFIER .)
    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 40

state 28

    (12) identifier_list -> STRING .

    SCHEDULE        reduce using rule 12 (identifier_list -> STRING .)
    SYM_END         reduce using rule 12 (identifier_list -> STRING .)
    FROM            reduce using rule 12 (identifier_list -> STRING .)
    FOR             reduce using rule 12 (identifier_list -> STRING .)
    TO              reduce using rule 12 (identifier_list -> STRING .)
    ON              reduce using rule 12 (identifier_list -> STRING .)


state 29

    (20) view_command -> KEYWORD_VIEW SCHEDULE . FOR identifier_list SYM_END

    FOR             shift and go to state 41


state 30

    (21) history_command -> KEYWORD_HISTORY FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 42

state 31

    (22) help_command -> KEYWORD_HELP SYM_END .

    $end            reduce using rule 22 (help_command -> KEYWORD_HELP SYM_END .)


state 32

    (23) exit_command -> KEYWORD_EXIT SYM_END .

    $end            reduce using rule 23 (exit_command -> KEYWORD_EXIT SYM_END .)


state 33

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR . identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 43

state 34

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS . FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    FOR             shift and go to state 44


state 35

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION FOR . identifier_list FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 45

state 36

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS . FOR identifier_list FOR identifier_list SYM_END

    FOR             shift and go to state 46


state 37

    (17) pay_command -> KEYWORD_PAY RESERVATION FOR . identifier_list FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 47

state 38

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION FOR . identifier_list FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 48

state 39

    (19) list_command -> KEYWORD_LIST identifier_list SCHEDULE . SYM_END

    SYM_END         shift and go to state 49


state 40

    (10) identifier_list -> IDENTIFIER identifier_list .

    SCHEDULE        reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)
    SYM_END         reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)
    FROM            reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)
    FOR             reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)
    TO              reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)
    ON              reduce using rule 10 (identifier_list -> IDENTIFIER identifier_list .)


state 41

    (20) view_command -> KEYWORD_VIEW SCHEDULE FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 50

state 42

    (21) history_command -> KEYWORD_HISTORY FOR identifier_list . SYM_END

    SYM_END         shift and go to state 51


state 43

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list . FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    FROM            shift and go to state 52


state 44

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR . identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 53

state 45

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list . FOR identifier_list SYM_END

    FOR             shift and go to state 54


state 46

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR . identifier_list FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 55

state 47

    (17) pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list . FOR identifier_list SYM_END

    FOR             shift and go to state 56


state 48

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list . FOR identifier_list SYM_END

    FOR             shift and go to state 57


state 49

    (19) list_command -> KEYWORD_LIST identifier_list SCHEDULE SYM_END .

    $end            reduce using rule 19 (list_command -> KEYWORD_LIST identifier_list SCHEDULE SYM_END .)


state 50

    (20) view_command -> KEYWORD_VIEW SCHEDULE FOR identifier_list . SYM_END

    SYM_END         shift and go to state 58


state 51

    (21) history_command -> KEYWORD_HISTORY FOR identifier_list SYM_END .

    $end            reduce using rule 21 (history_command -> KEYWORD_HISTORY FOR identifier_list SYM_END .)


state 52

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM . identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 59

state 53

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list . FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    FROM            shift and go to state 60


state 54

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 61

state 55

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list . FOR identifier_list SYM_END

    FOR             shift and go to state 62


state 56

    (17) pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 63

state 57

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 64

state 58

    (20) view_command -> KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END .

    $end            reduce using rule 20 (view_command -> KEYWORD_VIEW SCHEDULE FOR identifier_list SYM_END .)


state 59

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list . TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    TO              shift and go to state 65


state 60

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM . identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 66

state 61

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR identifier_list . SYM_END

    SYM_END         shift and go to state 67


state 62

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 68

state 63

    (17) pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list FOR identifier_list . SYM_END

    SYM_END         shift and go to state 69


state 64

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list FOR identifier_list . SYM_END

    SYM_END         shift and go to state 70


state 65

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO . identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 71

state 66

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list . TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END

    TO              shift and go to state 72


state 67

    (15) confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR identifier_list SYM_END .

    $end            reduce using rule 15 (confirm_command -> KEYWORD_CONFIRM RESERVATION FOR identifier_list FOR identifier_list SYM_END .)


state 68

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR identifier_list . SYM_END

    SYM_END         shift and go to state 73


state 69

    (17) pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list FOR identifier_list SYM_END .

    $end            reduce using rule 17 (pay_command -> KEYWORD_PAY RESERVATION FOR identifier_list FOR identifier_list SYM_END .)


state 70

    (18) cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list FOR identifier_list SYM_END .

    $end            reduce using rule 18 (cancel_command -> KEYWORD_CANCEL RESERVATION FOR identifier_list FOR identifier_list SYM_END .)


state 71

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list . ON DATE AT TIME FOR identifier_list SYM_END

    ON              shift and go to state 74


state 72

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO . identifier_list ON DATE AT TIME FOR identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 75

state 73

    (16) confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR identifier_list SYM_END .

    $end            reduce using rule 16 (confirm_command -> KEYWORD_CONFIRM INTEGER RESERVATIONS FOR identifier_list FOR identifier_list SYM_END .)


state 74

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON . DATE AT TIME FOR identifier_list SYM_END

    DATE            shift and go to state 76


state 75

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list . ON DATE AT TIME FOR identifier_list SYM_END

    ON              shift and go to state 77


state 76

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE . AT TIME FOR identifier_list SYM_END

    AT              shift and go to state 78


state 77

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON . DATE AT TIME FOR identifier_list SYM_END

    DATE            shift and go to state 79


state 78

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT . TIME FOR identifier_list SYM_END

    TIME            shift and go to state 80


state 79

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE . AT TIME FOR identifier_list SYM_END

    AT              shift and go to state 81


state 80

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME . FOR identifier_list SYM_END

    FOR             shift and go to state 82


state 81

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT . TIME FOR identifier_list SYM_END

    TIME            shift and go to state 83


state 82

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 84

state 83

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME . FOR identifier_list SYM_END

    FOR             shift and go to state 85


state 84

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list . SYM_END

    SYM_END         shift and go to state 86


state 85

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR . identifier_list SYM_END
    (10) identifier_list -> . IDENTIFIER identifier_list
    (11) identifier_list -> . IDENTIFIER
    (12) identifier_list -> . STRING

    IDENTIFIER      shift and go to state 27
    STRING          shift and go to state 28

    identifier_list                shift and go to state 87

state 86

    (13) book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END .

    $end            reduce using rule 13 (book_command -> KEYWORD_BOOK KEYWORD_TICKET FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END .)


state 87

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list . SYM_END

    SYM_END         shift and go to state 88


state 88

    (14) book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END .

    $end            reduce using rule 14 (book_command -> KEYWORD_BOOK INTEGER KEYWORD_TICKETS FOR identifier_list FROM identifier_list TO identifier_list ON DATE AT TIME FOR identifier_list SYM_END .)

